feat:add hover and flexibility

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -12,7 +12,7 @@
       <div class="row title">
          <h1>CSS Bayan</h1>
       </div>
-      <div class="row">
+      <div tabindex="0" class="row">
          <div class="header">
             <h3>take my money</h3>
             <img class="plus" src="./icons/plus.webp" alt="plus">
@@ -22,7 +22,7 @@
                <img src="./img/1.jpg" alt="take my money">
             </div>
       </div>
-      <div class="row">
+      <div tabindex="1" class="row">
          <div class="header">
             <h3>when you find out</h3>
             <img class="plus" src="./icons/plus.webp" alt="plus">
@@ -32,7 +32,7 @@
                <img src="./img/2.jpg" alt="when you find out">
             </div>
       </div>
-      <div class="row">
+      <div tabindex="2" class="row">
          <div class="header">
             <h3>when you are at work</h3>
             <img class="plus" src="./icons/plus.webp" alt="plus">
@@ -42,7 +42,7 @@
                <img src="./img/3.jpg" alt="when you are at work">
             </div>
       </div>
-      <div class="row">
+      <div tabindex="3" class="row">
          <div class="header">
             <h3>So, you are telling me</h3>
             <img class="plus" src="./icons/plus.webp" alt="plus">
@@ -52,7 +52,7 @@
                <img src="./img/4.jpg" alt="So, you are telling me">
             </div>
       </div>
-      <div class="row">
+      <div tabindex="4" class="row">
          <div class="header">
             <h3>You hate memes?</h3>
             <img class="plus" src="./icons/plus.webp" alt="plus">
@@ -63,7 +63,7 @@
             </div>
          
       </div>
-      <div class="row">
+      <div tabindex="5" class="row">
          <div class="header">
             <h3>I had fun once</h3>
             <img class="plus" src="./icons/plus.webp" alt="plus">
